--- a/web/src/pages/VolatilityMarket.css
+++ b/web/src/pages/VolatilityMarket.css
@@ -311,7 +311,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: .25rem;
 }
 
 .positions-header h3 {
